nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # Make sure to add it in hosts file in your OS, or just remove it and route the service on a nodeport.
  - host: myapp.example.com
    http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: zoo-backend-service
            port:
              number: 80
